--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<h1><b>Welcome to the website of Tyler Wolf</b></h1>
+
+<html>
+<head>
+<title>Tyler Wolf</title>
+<!-- not sure which font to use yet -->
+<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
+
+<style>
+body {
+/* font-family: 'Roboto Mono', monospace; */
+font-family: 'Bungee Shade', cursive;
+background-color: #eeeeee; 
+margin: 40px;
+}
+.box {
+width: 400px;
+height: 400px;
+float: left;
+padding: 0px 80px 80px 0px;
+}
+.picture {
+width: 400px; 
+height: 400px;
+overflow: hidden;
+}
+</style>
+
+</head>
+<body>
+
+<div class="box">
+<p>Tyler Wolf<br/>
+<br/>
+Hobby AI/ML<br/>
+
+––<br/>
+<a href="mailto:tyler@twolf.dev">Email</a><br>
+<a href="https://twitter.com/thetylerwolf">Twitter</a><br>
+<a href="https://github.com/thetylerwolfman">GitHub</a><br>
+<a href="https://git.sr.ht/~tylerwolf/">Sourcehut</a><br>
+
+<div>
+<p>stuff will go here soon</p>
+</div>
+
+
+
+</body>
+</html>
