--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 <title>Tyler Wolf</title>
-<!-- not sure which font to use yet -->
-<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
+<!-- font -->
+<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 
 <style>
 body {
-/* font-family: 'Roboto Mono', monospace; */
-font-family: 'Bungee Shade', cursive;
+font-family: 'Source Code Pro', cursive;
 background-color: #eeeeee; 
 margin: 40px;
 }
@@ -36,7 +34,7 @@ Hobby AI/ML<br/>
 
 ––<br/>
 <a href="mailto:tyler@twolf.dev">Email</a><br>
-<a href="https://twitter.com/thetylerwolf">Twitter</a><br>
+<a href="https://twitter.com/tylerwolf35">Twitter</a><br>
 <a href="https://github.com/thetylerwolfman">GitHub</a><br>
 <a href="https://git.sr.ht/~tylerwolf/">Sourcehut</a><br>
 
