--- a/lilnasx/index.html
+++ b/lilnasx/index.html
@@ -20,3 +20,24 @@
 <li>C7osure (You Like)</li>
 
 <li>Rodeo</li>
+
+<li>Old Town Road (Young Thug &amp; Mason Ramsey Remix)</li>
+
+<li>Old Town Road (Seoul Town Road Remix)</li>
+
+<li>Kick It</li>
+
+<li>F9mily (You &amp; Me)</li>
+
+<li>Bring U Down</li>
+
+<li>CARRY ON</li>
+
+<li>Sonic Shit</li>
+
+<li>Old Town Road (Diplo Remix)</li>
+
+<li>Thanos (Blow It)</li>
+
+<li>Donald Trump</li>
+</ul>
