--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@ Hobby AI/ML<br/>
 <a href="https://github.com/thetylerwolfman">GitHub</a><br>
 <a href="https://git.sr.ht/~tylerwolf/">Sourcehut</a><br>
 
-<div>
-<p>stuff will go here soon</p>
+<div class="box">
+<a href="data">Interactive Data</a>
+  <p>Here is a collection of interactive data projects I have worked on.</p>
 </div>
 
 
